# bio_simulation

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/variants/: variants.csv
results/: phase1_calibration_esmc_600m.json  phase1_likelihood_esmc_600m.csv  phase1_metrics_esmc_600m.json  phase2_h1_esmc_600m.json  phase3_classify_esmc_600m.json  phase3_shap_columns_esmc_600m.csv  phase3_shap_top_features_esmc_600m.csv
scripts/: phase0_smoke_test.py  phase1_baseline.py  phase1_calibration.py  phase1_curate.py  phase2_disruption.py  phase3_classify.py  phase3_h2_interpret.py  phase3_shap.py
src/sae_cancer/: __init__.py
src/sae_cancer/baselines/: __init__.py  embedding.py  likelihood.py
src/sae_cancer/disruption/: __init__.py  compute.py  dataset.py
src/sae_cancer/esmc/: __init__.py  extract.py  sae.py
src/sae_cancer/eval/: __init__.py  calibration.py  metrics.py
src/sae_cancer/interpret/: __init__.py  descriptions.py  mechanism.py  shap_analysis.py
src/sae_cancer/models/: __init__.py  classify.py
src/sae_cancer/variants/: __init__.py  clinvar.py  curate.py  hotspots.py  panel.py
